--- a/index.html
+++ b/index.html
@@ -5,14 +5,26 @@
   <title>Research Notes — JinGyu</title>
 </head>
 <body>
-  <h1>Research Notes</h1>
-  <p>
-    This site documents the development of my independent research.
-    Core ideas and structural frameworks are recorded here
-    as part of an ongoing program.
-  </p>
-  <p>
-    Public release on GitHub Pages serves as a timestamped reference.
-  </p>
+
+<nav>
+  <a href="/">Home</a> |
+  <a href="/research/">Research</a> |
+  <a href="/publications/">Publications</a> |
+  <a href="/notes/">Notes</a> |
+  <a href="/cv/">CV</a>
+</nav>
+
+<h1>Research Notes</h1>
+
+<p>
+This site documents the development of my independent research.
+Core ideas and structural frameworks are recorded here
+as part of an ongoing program.
+</p>
+
+<p>
+Public release on GitHub Pages serves as a timestamped reference.
+</p>
+
 </body>
 </html>
