--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <title>Research Notes — JinGyu</title>
+  <link rel="stylesheet" href="/assets/style.css">
 </head>
 <body>
 
