--- a/publications/index.html
+++ b/publications/index.html
@@ -27,5 +27,27 @@ Public records and archived versions (e.g., Zenodo, arXiv)
 serve as formal timestamped references.
 </p>
 
+<h2>Preprints and Archives</h2>
+
+<ul>
+  <li>
+    <strong>Title:</strong> [The Riemann Hypothesis via a Mean-Square Collision of a Fixed Observable]<br>
+    <strong>Archive:</strong>
+    <a href="https://doi.org/10.5281/zenodo.18449172" target="_blank">
+      Zenodo (DOI: 10.5281/zenodo.18449172)
+    </a><br>
+    <strong>Status:</strong> Public archive (timestamped)
+  </li>
+  
+  <li>
+    <strong>Title:</strong> [Structural Selection and Dynamical Formwork Constraints]<br>
+    <strong>Archive:</strong>
+    <a href="https://doi.org/10.5281/zenodo.18449676" target="_blank">
+      Zenodo (DOI: 10.5281/zenodo.18449676)
+    </a><br>
+    <strong>Status:</strong> Public archive (timestamped)
+  </li>
+</ul>
+
 </body>
 </html>
