--- a/research/index.html
+++ b/research/index.html
@@ -26,5 +26,20 @@ developed as part of my independent research program.
 Individual pages document specific components and evolutions of the work.
 </p>
 
+<h2>Core Framework</h2>
+
+<p>
+<a href="/research/core-framework.html">
+  Core Research Framework
+</a>
+</p>
+
+<p>
+This page serves as the primary reference point
+for the central ideas of the research program.
+</p>
+
+  
 </body>
+  
 </html>
