--- a/notes/index.html
+++ b/notes/index.html
@@ -27,5 +27,15 @@ Entries are intended as concise, timestamped references rather than
 fully polished expositions.
 </p>
 
+<h2>Entries</h2>
+
+<ul>
+  <li>
+    <a href="/notes/2026-01-31-core-idea-log.html">
+      2026-01-31 — Core idea log
+    </a>
+  </li>
+</ul>
+  
 </body>
 </html>
