--- a/research/index.html
+++ b/research/index.html
@@ -9,7 +9,7 @@
 
 <nav>
   <a href="/">Home</a> |
-  <a href="/research/">Research</a> |
+  <a href="/research/" aria-current="page">Research</a> |
   <a href="/publications/">Publications</a> |
   <a href="/notes/">Notes</a> |
   <a href="/cv/">CV</a>
