--- a/publications/index.html
+++ b/publications/index.html
@@ -10,7 +10,7 @@
 <nav>
   <a href="/">Home</a> |
   <a href="/research/">Research</a> |
-  <a href="/publications/">Publications</a> |
+  <a href="/publications/" aria-current="page">Publications</a> |
   <a href="/notes/">Notes</a> |
   <a href="/cv/">CV</a>
 </nav>
