--- a/notes/index.html
+++ b/notes/index.html
@@ -11,7 +11,7 @@
   <a href="/">Home</a> |
   <a href="/research/">Research</a> |
   <a href="/publications/">Publications</a> |
-  <a href="/notes/">Notes</a> |
+  <a href="/notes/" aria-current="page">Notes</a> |
   <a href="/cv/">CV</a>
 </nav>
 
