--- a/cv/index.html
+++ b/cv/index.html
@@ -12,7 +12,7 @@
   <a href="/research/">Research</a> |
   <a href="/publications/">Publications</a> |
   <a href="/notes/">Notes</a> |
-  <a href="/cv/">CV</a>
+  <a href="/cv/" aria-current="page">CV</a>
 </nav>
 
 <h1>Curriculum Vitae</h1>
