--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
 
 <nav>
-  <a href="/">Home</a> |
+  <a href="/" aria-current="page">Home</a> |
   <a href="/research/">Research</a> |
   <a href="/publications/">Publications</a> |
   <a href="/notes/">Notes</a> |
