--- a/index.html
+++ b/index.html
@@ -14,6 +14,13 @@
   <a href="/notes/">Notes</a> |
   <a href="/cv/">CV</a>
 </nav>
+  
+<header class="hero">
+  <h1 class="hero-title">JinGyu</h1>
+  <p class="hero-tagline">
+    Independent Researcher in Mathematical Structures and Foundations
+  </p>
+</header>
 
 <h1>Research Notes</h1>
 
