--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 </nav>
   
 <header class="hero">
-  <h1 class="hero-title">JinGyu</h1>
+  <h1 class="hero-title">NeoArk Lab.</h1>
   <p class="hero-tagline">
     Independent Researcher in Mathematical Structures and Foundations
   </p>
