--- a/index.html
+++ b/index.html
@@ -2,37 +2,70 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>Research Notes — JinGyu</title>
+  <title>JinGyu — Research</title>
   <link rel="stylesheet" href="/assets/style.css">
 </head>
 <body>
 
 <nav>
-  <a href="/" aria-current="page">Home</a> |
-  <a href="/research/">Research</a> |
-  <a href="/publications/">Publications</a> |
-  <a href="/notes/">Notes</a> |
+  <a href="/" aria-current="page">Home</a>
+  <a href="/research/">Research</a>
+  <a href="/publications/">Publications</a>
+  <a href="/notes/">Notes</a>
   <a href="/cv/">CV</a>
 </nav>
-  
+
 <header class="hero">
-  <h1 class="hero-title">NeoArk Lab.</h1>
-  <p class="hero-tagline">
-    Independent Researcher in Mathematical Structures and Foundations
-  </p>
+  <div class="hero-inner">
+    <div class="hero-brand">Independent Research Archive</div>
+    <h1 class="hero-title">Structural frameworks in prime theory</h1>
+    <p class="hero-subtitle">
+      A public, timestamped index of manuscripts, notes, and ongoing work.
+    </p>
+    <div class="hero-actions">
+      <a class="btn" href="/publications/">View Publications</a>
+      <a class="btn ghost" href="/notes/">Read Notes</a>
+    </div>
+  </div>
 </header>
 
-<h1>Research Notes</h1>
+<section class="section">
+  <div class="grid-2">
+    <div class="card">
+      <h2>Focus</h2>
+      <p class="muted">
+        Core directions and structural tools developed as part of an independent program.
+      </p>
+      <ul>
+        <li>Prime log–phase observables & structural filtering</li>
+        <li>Mean-square collision framework (RH blueprint)</li>
+        <li>Readout / timestamp-first research workflow</li>
+      </ul>
+      <p><a href="/research/">Go to Research →</a></p>
+    </div>
 
-<p>
-This site documents the development of my independent research.
-Core ideas and structural frameworks are recorded here
-as part of an ongoing program.
-</p>
+    <div class="card">
+      <h2>Recent Publications</h2>
+      <p class="muted">Latest archived items (Zenodo / preprints).</p>
+      <ul class="list-tight">
+        <li><strong>[Title]</strong> — <a href="#">Zenodo DOI</a></li>
+        <li><strong>[Title]</strong> — <a href="#">Zenodo DOI</a></li>
+        <li><strong>[Title]</strong> — <a href="#">Zenodo DOI</a></li>
+      </ul>
+      <p><a href="/publications/">Full list →</a></p>
+    </div>
+  </div>
+</section>
 
-<p>
-Public release on GitHub Pages serves as a timestamped reference.
-</p>
+<section class="section">
+  <div class="card">
+    <h2>About this site</h2>
+    <p class="muted">
+      This website serves as a timestamped reference layer to support priority claims,
+      linking archived records (Zenodo / DOI) with a readable public index.
+    </p>
+  </div>
+</section>
 
 </body>
 </html>
