--- a/index.html
+++ b/index.html
@@ -2,69 +2,51 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>JinGyu — Research</title>
+  <title>JinGyu — Independent Research</title>
   <link rel="stylesheet" href="/assets/style.css">
 </head>
 <body>
 
 <nav>
-  <a href="/" aria-current="page">Home</a>
+  <a href="/">Home</a>
   <a href="/research/">Research</a>
   <a href="/publications/">Publications</a>
   <a href="/notes/">Notes</a>
   <a href="/cv/">CV</a>
 </nav>
 
-<header class="hero">
-  <div class="hero-inner">
-    <div class="hero-brand">Independent Research Archive</div>
-    <h1 class="hero-title">Structural frameworks in prime theory</h1>
-    <p class="hero-subtitle">
-      A public, timestamped index of manuscripts, notes, and ongoing work.
+<section class="hero">
+  <div class="hero-text">
+    <h1>JinGyu</h1>
+    <p class="subtitle">
+      Independent Research Program<br>
+      Mathematical Structures and Foundations
     </p>
-    <div class="hero-actions">
-      <a class="btn" href="/publications/">View Publications</a>
-      <a class="btn ghost" href="/notes/">Read Notes</a>
-    </div>
-  </div>
-</header>
-
-<section class="section">
-  <div class="grid-2">
-    <div class="card">
-      <h2>Focus</h2>
-      <p class="muted">
-        Core directions and structural tools developed as part of an independent program.
-      </p>
-      <ul>
-        <li>Prime log–phase observables & structural filtering</li>
-        <li>Mean-square collision framework (RH blueprint)</li>
-        <li>Readout / timestamp-first research workflow</li>
-      </ul>
-      <p><a href="/research/">Go to Research →</a></p>
-    </div>
-
-    <div class="card">
-      <h2>Recent Publications</h2>
-      <p class="muted">Latest archived items (Zenodo / preprints).</p>
-      <ul class="list-tight">
-        <li><strong>[Title]</strong> — <a href="#">Zenodo DOI</a></li>
-        <li><strong>[Title]</strong> — <a href="#">Zenodo DOI</a></li>
-        <li><strong>[Title]</strong> — <a href="#">Zenodo DOI</a></li>
-      </ul>
-      <p><a href="/publications/">Full list →</a></p>
-    </div>
   </div>
 </section>
 
 <section class="section">
-  <div class="card">
-    <h2>About this site</h2>
-    <p class="muted">
-      This website serves as a timestamped reference layer to support priority claims,
-      linking archived records (Zenodo / DOI) with a readable public index.
-    </p>
-  </div>
+  <h2>Current Research Focus</h2>
+  <p>
+    Structural constraints in analytic number theory,
+    mean–square incompatibility frameworks,
+    and log–phase spectral structures.
+  </p>
+</section>
+
+<section class="section">
+  <h2>Research Principle</h2>
+  <blockquote>
+    Structure precedes explanation.<br>
+    Selection precedes generation.
+  </blockquote>
+</section>
+
+<section class="section small">
+  <p class="footnote">
+    This site serves as a public, timestamped research record.
+    All materials are archived and version-controlled.
+  </p>
 </section>
 
 </body>
