--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
 <section class="hero">
   <div class="hero-text">
-    <h1>JinGyu</h1>
+    <h1>NeoArk Lab.</h1>
     <p class="subtitle">
       Independent Research Program<br>
       Mathematical Structures and Foundations
