--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <title>JinGyu — Independent Research</title>
+  <title>NeoArk Lab. — Independent Research</title>
   <link rel="stylesheet" href="/assets/style.css">
 </head>
 <body>
