--- a/index.html
+++ b/index.html
@@ -28,9 +28,9 @@
 <section class="section">
   <h2>Current Research Focus</h2>
   <p>
-    Structural constraints in analytic number theory,
-    mean–square incompatibility frameworks,
-    and log–phase spectral structures.
+* Admissibility-based prime readout: Build an operator that predicts the next prime by eliminating non-admissible candidates rather than generating values.
+* Log–phase landscape reconstruction: Reconstruct the “prime landscape” on the log axis and extract stable spectral/phase invariants.
+* Closure program: Link structural filtering, readout dynamics, and mean-square consistency constraints into a single, testable framework.
   </p>
 </section>
 
