--- a/index.html
+++ b/index.html
@@ -28,9 +28,21 @@
 <section class="section">
   <h2>Current Research Focus</h2>
   <p>
-* Admissibility-based prime readout: Build an operator that predicts the next prime by eliminating non-admissible candidates rather than generating values.
-* Log–phase landscape reconstruction: Reconstruct the “prime landscape” on the log axis and extract stable spectral/phase invariants.
-* Closure program: Link structural filtering, readout dynamics, and mean-square consistency constraints into a single, testable framework.
+* Prime Prediction via Admissibility Selection: 
+  Develop a ``readout'' operator that predicts prime gaps by selecting the unique stable candidate
+  from an admissible set (square--free + small--factor screening + head selection).\\
+
+* Branch--Selective Log--Phase Dynamics: 
+  Model prime progression as a relation--driven update on $(u,\theta,\sigma)$, where phase laws switch
+  by a finite--state branch variable (selection, not generation).\\
+
+* Robust Invariants \& Scaling: 
+  Test doublet/symmetry invariants and stress--test generalization from $10^4$ to $10^6{+}$
+  with reproducible GPU experiments.\\
+
+* RRH--to--Readout Interface (supporting track): 
+  Maintain a consistent ``same observable'' pipeline linking explicit--formula resonance constraints
+  to structural mean--square control.
   </p>
 </section>
 
