--- a/index.html
+++ b/index.html
@@ -27,23 +27,35 @@
 
 <section class="section">
   <h2>Current Research Focus</h2>
-  <p>
-* Prime Prediction via Admissibility Selection: 
-  Develop a ``readout'' operator that predicts prime gaps by selecting the unique stable candidate
-  from an admissible set (square--free + small--factor screening + head selection).\\
 
-* Branch--Selective Log--Phase Dynamics: 
-  Model prime progression as a relation--driven update on $(u,\theta,\sigma)$, where phase laws switch
-  by a finite--state branch variable (selection, not generation).\\
+  <ul>
+    <li>
+      <strong>Prime Prediction via Admissibility Selection.</strong><br>
+      Develop a “readout” operator that predicts prime gaps by selecting the unique
+      stable candidate from an admissible set
+      (square–free filtering, small–factor screening, and head selection).
+    </li>
 
-* Robust Invariants \& Scaling: 
-  Test doublet/symmetry invariants and stress--test generalization from $10^4$ to $10^6{+}$
-  with reproducible GPU experiments.\\
+    <li>
+      <strong>Branch–Selective Log–Phase Dynamics.</strong><br>
+      Model prime progression as a relation–driven update on
+      <em>(u, θ, σ)</em>, where phase laws switch via a finite–state
+      branch variable (selection, not generation).
+    </li>
 
-* RRH--to--Readout Interface (supporting track): 
-  Maintain a consistent ``same observable'' pipeline linking explicit--formula resonance constraints
-  to structural mean--square control.
-  </p>
+    <li>
+      <strong>Robust Invariants &amp; Scaling.</strong><br>
+      Test doublet/symmetry invariants and stress–test generalization
+      from 10⁴ to 10⁶+ using reproducible GPU experiments.
+    </li>
+
+    <li>
+      <strong>RRH–to–Readout Interface (supporting track).</strong><br>
+      Maintain a consistent “same observable” pipeline linking
+      explicit–formula resonance constraints to structural
+      mean–square control.
+    </li>
+  </ul>
 </section>
 
 <section class="section">
