--- a/index.html
+++ b/index.html
@@ -60,10 +60,12 @@
 
 <section class="section">
   <h2>Research Principle</h2>
-  <blockquote>
-    Structure precedes explanation.<br>
-    Selection precedes generation.
-  </blockquote>
+  <ul class="bullets">
+    <li><strong>No guesswork:</strong> I only trust mechanisms that survive ablations (reference on/off, filter on/off, scaling stress tests).</li>
+    <li><strong>Hard falsifiability:</strong> If the operator can’t generalize, the hypothesis is rejected.</li>
+    <li><strong>Minimal assumptions, maximal structure:</strong> Remove known sources of coherence (squares / small-period artifacts) before claiming “laws.”</li>
+    <li><strong>Implementation-first:</strong> A theory earns its right to exist only when it compiles into a working readout engine.</li>
+  </ul>
 </section>
 
 <section class="section small">
