--- a/index.html
+++ b/index.html
@@ -44,10 +44,13 @@
     </li>
 
     <li>
-      <strong>Robust Invariants &amp; Scaling.</strong><br>
-      Test doublet/symmetry invariants and stress–test generalization
-      from 10⁴ to 10⁶+ using reproducible GPU experiments.
+      <strong>Invariant Persistence and Scaling.</strong><br>
+      Test whether the doublet and symmetry invariants
+      remain invariant under scale extension,
+      supporting their role as structural constraints
+      rather than finite-size artifacts.
     </li>
+
 
     <li>
       <strong>RRH–to–Readout Interface (supporting track).</strong><br>
