--- a/index.html
+++ b/index.html
@@ -22,6 +22,9 @@
       Independent Research Program<br>
       Mathematical Structures and Foundations
     </p>
+    <p class="subtext">
+      neoark2025@naver.com
+    </p>
   </div>
 </section>
 
