--- a/publications/index.html
+++ b/publications/index.html
@@ -85,10 +85,10 @@ serve as formal timestamped references.
   </li>
       
   <li>
-    <strong>Title:</strong> []<br>
+    <strong>Title:</strong> [Riemann Hypothesis as a Structural Closure]<br>
     <strong>Archive:</strong>
-    <a href="" target="_blank">
-      Zenodo (DOI: )
+    <a href="https://doi.org/10.5281/zenodo.18457917" target="_blank">
+      Zenodo (DOI: 10.5281/zenodo.18457917)
     </a><br>
     <strong>Status:</strong> Public archive (timestamped)
   </li>
