--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 
 
     <li>
-      <strong>RRH–to–Readout Interface (supporting track).</strong><br>
+      <strong>RH–to–Readout Interface (supporting track).</strong><br>
       Maintain a consistent “same observable” pipeline linking
       explicit–formula resonance constraints to structural
       mean–square control.
