--- a/index.html
+++ b/index.html
@@ -13,6 +13,9 @@
   <a href="/publications/">Publications</a>
   <a href="/notes/">Notes</a>
   <a href="/cv/">CV</a>
+  <a href="https://hits.seeyoufarm.com">
+  <img src="https://hits.seeyoufarm.com/api/count/incr/badge.svg?url=https%3A%2F%2Fjingyu-papa.github.io&count_bg=%2379C83D&title_bg=%23555555&icon=&icon_color=%23E7E7E7&title=hits&edge_flat=false"/>
+</a>
 </nav>
 
 <section class="hero">
