--- a/index.html
+++ b/index.html
@@ -25,6 +25,9 @@
     <p class="subtext">
       neoark2025@naver.com
     </p>
+    <p>
+  <img src="https://visitor-badge.laobi.icu/badge?page_id=jingyu-papa.jingyu-papa.github.io" alt="visitor counter">
+    </p>
   </div>
 </section>
 
