--- a/index.html
+++ b/index.html
@@ -8,10 +8,10 @@
 <body>
 
 <nav>
-  <a href="/" aria-current="page">Home</a>
-  <a href="/research/">Research</a>
-  <a href="/publications/">Publications</a>
-  <a href="/notes/">Notes</a>
+  <a href="/" aria-current="page">Home</a> |
+  <a href="/research/">Research</a> |
+  <a href="/publications/">Publications</a> |
+  <a href="/notes/">Notes</a> |
   <a href="/cv/">CV</a>
 </nav>
 
