--- a/research/index.html
+++ b/research/index.html
@@ -8,10 +8,10 @@
 <body>
 
 <nav>
-  <a href="/">Home</a> |
-  <a href="/research/" aria-current="page">Research</a> |
-  <a href="/publications/">Publications</a> |
-  <a href="/notes/">Notes</a> |
+  <a href="/">Home</a>
+  <a href="/research/" aria-current="page">Research</a>
+  <a href="/publications/">Publications</a>
+  <a href="/notes/">Notes</a>
   <a href="/cv/">CV</a>
 </nav>
 
