--- a/publications/index.html
+++ b/publications/index.html
@@ -8,10 +8,10 @@
 <body>
 
 <nav>
-  <a href="/">Home</a> |
-  <a href="/research/">Research</a> |
-  <a href="/publications/" aria-current="page">Publications</a> |
-  <a href="/notes/">Notes</a> |
+  <a href="/">Home</a>
+  <a href="/research/">Research</a>
+  <a href="/publications/" aria-current="page">Publications</a>
+  <a href="/notes/">Notes</a>
   <a href="/cv/">CV</a>
 </nav>
 
