--- a/notes/index.html
+++ b/notes/index.html
@@ -8,10 +8,10 @@
 <body>
 
 <nav>
-  <a href="/">Home</a> |
-  <a href="/research/">Research</a> |
-  <a href="/publications/">Publications</a> |
-  <a href="/notes/" aria-current="page">Notes</a> |
+  <a href="/">Home</a>
+  <a href="/research/">Research</a>
+  <a href="/publications/">Publications</a>
+  <a href="/notes/" aria-current="page">Notes</a>
   <a href="/cv/">CV</a>
 </nav>
 
