--- a/cv/index.html
+++ b/cv/index.html
@@ -8,10 +8,10 @@
 <body>
 
 <nav>
-  <a href="/">Home</a> |
-  <a href="/research/">Research</a> |
-  <a href="/publications/">Publications</a> |
-  <a href="/notes/">Notes</a> |
+  <a href="/">Home</a>
+  <a href="/research/">Research</a>
+  <a href="/publications/">Publications</a>
+  <a href="/notes/">Notes</a>
   <a href="/cv/" aria-current="page">CV</a>
 </nav>
 
