--- a/index.html
+++ b/index.html
@@ -32,6 +32,21 @@
 </section>
 
 <section class="section">
+  <h2>Research Program Structure</h2>
+
+  <img
+    src="/assets/program-map.png"
+    alt="Admissibility Research Program — structural map"
+    class="program-map"
+  />
+
+  <p class="footnote">
+    Structural overview of the admissibility research program:
+    a multi-layer closure framework centered on deterministic readout.
+  </p>
+</section>
+  
+<section class="section">
   <h2>Current Research Focus</h2>
 
   <ul>
