--- a/index.html
+++ b/index.html
@@ -35,7 +35,7 @@
   <h2>Research Program Structure</h2>
 
   <img
-    src="/assets/program-map.png"
+    src="/assets/Paper Program.jpg"
     alt="Admissibility Research Program — structural map"
     class="program-map"
   />
