--- a/notes/index.html
+++ b/notes/index.html
@@ -31,7 +31,7 @@ fully polished expositions.
 
 <ul>
   <li>
-    <a href="/notes/2026-01-31-core-idea-log.html">
+    <a href="/notes/Layer 0 - Core Concepts.html">
       2026-01-31 — Core idea log
     </a>
   </li>
