--- a/notes/index.html
+++ b/notes/index.html
@@ -32,7 +32,7 @@ fully polished expositions.
 <ul>
   <li>
     <a href="/notes/Layer 0 - Core Concepts.html">
-      2026-01-31 — Core idea log
+      Layer 0 - Core Concepts
     </a>
   </li>
 </ul>
