--- a/notes/Layer 0 - Core Concepts.html
+++ b/notes/Layer 0 - Core Concepts.html
@@ -6,6 +6,21 @@
   <title>Notes — Layer 0 Core Concepts</title>
   <link rel="stylesheet" href="/assets/style.css" />
 
+  <!-- MathJax: LaTeX rendering for notes -->
+  <script>
+    window.MathJax = {
+      tex: {
+        inlineMath: [['$', '$'], ['\\(', '\\)']],
+        displayMath: [['$$', '$$'], ['\\[', '\\]']],
+        processEscapes: true
+      },
+      svg: {
+        fontCache: 'global'
+      }
+    };
+  </script>
+  <script src="https://cdn.jsdelivr.net/npm/mathjax@3/es5/tex-svg.js"></script>
+
   <!-- Page-local polish (safe, minimal, does not break global CSS) -->
   <style>
     :root{
@@ -35,16 +50,14 @@
     .def-desc{ margin: 0; }
     .source{ margin: 8px 0 0; font-size: 0.78rem; color: var(--muted); font-style: italic; }
 
-    /* Code/math blocks */
-    pre{
+    /* Math display blocks (MathJax-friendly) */
+    mjx-container[jax="SVG"][display="true"]{
+      margin: 12px 0;
+      padding: 12px 14px;
       background: var(--soft);
       border: 1px solid var(--rule);
       border-radius: 12px;
-      padding: 14px 16px;
-      margin: 10px 0 10px;
       overflow-x: auto;
-      line-height: 1.55;
-      font-size: 0.95rem;
     }
 
     /* Reading rules list */
@@ -57,6 +70,7 @@
     .note-footer{ margin: 26px 0 10px; color: var(--muted); font-size: 0.92rem; }
   </style>
 </head>
+
 
 <body>
   <nav>
