--- a/index.html
+++ b/index.html
@@ -36,44 +36,72 @@
 
   <ul>
     <li>
-      <strong>Prime Prediction via Admissibility Selection.</strong><br>
-      Develop a “readout” operator that predicts prime gaps by selecting the unique
-      stable candidate from an admissible set
-      (square–free filtering, small–factor screening, and head selection).
+      <strong>Deterministic Prime Readout via Admissibility.</strong><br>
+      Develop a deterministic, oracle-free readout operator that recovers the next prime
+      within a fixed window by eliminating non-admissible candidates.
+      The approach treats primes as survivors of a structural admissibility law,
+      not as outputs of a generative process.
     </li>
 
     <li>
-      <strong>Branch–Selective Log–Phase Dynamics.</strong><br>
-      Model prime progression as a relation–driven update on
-      <em>(u, θ, σ)</em>, where phase laws switch via a finite–state
-      branch variable (selection, not generation).
+      <strong>Structural Admissibility and Regime Closure.</strong><br>
+      Formalize admissibility as a scale-stable structural constraint,
+      identifying distinct operational regimes and the minimal certification
+      mechanism required to close survivor intrusions
+      without expanding the base sieve.
     </li>
 
     <li>
-      <strong>Invariant Persistence and Scaling.</strong><br>
-      Test whether the doublet and symmetry invariants
-      remain invariant under scale extension,
-      supporting their role as structural constraints
-      rather than finite-size artifacts.
+      <strong>Branch-Selective Log–Phase Dynamics.</strong><br>
+      Model prime progression as a relation-driven update on
+      logarithmic phase observables <em>(u, θ, σ)</em>,
+      where evolution proceeds via branch selection among finite admissible laws,
+      rather than probabilistic generation.
     </li>
 
+    <li>
+      <strong>Invariant Persistence under Scaling.</strong><br>
+      Test whether observed symmetry and doublet invariants persist
+      under scale extension, supporting their interpretation
+      as structural constraints rather than finite-size or grid artifacts.
+    </li>
 
     <li>
-      <strong>RH–to–Readout Interface (supporting track).</strong><br>
-      Maintain a consistent “same observable” pipeline linking
-      explicit–formula resonance constraints to structural
-      mean–square control.
+      <strong>Structural Closure Track: RH to Readout.</strong><br>
+      Maintain a consistent same-observable pipeline connecting
+      explicit-formula resonance constraints
+      to unconditional mean-square control,
+      framing the Riemann Hypothesis as a structural closure condition
+      rather than a standalone spectral conjecture.
     </li>
   </ul>
 </section>
 
 <section class="section">
-  <h2>Research Principle</h2>
+  <h2>Research Principles</h2>
   <ul class="bullets">
-    <li><strong>No guesswork:</strong> I only trust mechanisms that survive ablations (reference on/off, filter on/off, scaling stress tests).</li>
-    <li><strong>Hard falsifiability:</strong> If the operator can’t generalize, the hypothesis is rejected.</li>
-    <li><strong>Minimal assumptions, maximal structure:</strong> Remove known sources of coherence (squares / small-period artifacts) before claiming “laws.”</li>
-    <li><strong>Implementation-first:</strong> A theory earns its right to exist only when it compiles into a working readout engine.</li>
+    <li>
+      <strong>No guesswork.</strong>
+      Only mechanisms that survive systematic ablations
+      (reference on/off, filter on/off, regime stress tests)
+      are considered structurally meaningful.
+    </li>
+    <li>
+      <strong>Hard falsifiability.</strong>
+      If a readout operator fails to generalize across scales or windows,
+      the hypothesis is rejected without revision.
+    </li>
+    <li>
+      <strong>Minimal assumptions, maximal structure.</strong>
+      Known sources of artificial coherence
+      (perfect powers, small-period alignments, grid artifacts)
+      are removed before any structural claim is made.
+    </li>
+    <li>
+      <strong>Implementation-first.</strong>
+      A theoretical construct earns legitimacy
+      only when it compiles into a working, verifiable readout engine.
+    </li>
   </ul>
 </section>
 
@@ -88,16 +116,18 @@
 
   <p class="footnote">
     Structural overview of the admissibility research program:
-    a multi-layer closure framework centered on deterministic readout.
+    a layered closure framework progressing from analytic constraints
+    to deterministic readout.
   </p>
 </section>
-    
+
 <section class="section small">
   <p class="footnote">
     This site serves as a public, timestamped research record.
-    All materials are archived and version-controlled.
+    All materials are archived, versioned, and independently verifiable.
   </p>
 </section>
+
 
 </body>
 </html>
