--- a/notes/index.html
+++ b/notes/index.html
@@ -17,98 +17,25 @@
 
 <h1>Notes</h1>
 
-<p class="notes-intro">
-  A compact index of layer-wise reference notes (definitions, canonical objects, and core equations).
+<p>
+This page archives research notes, technical memos, and dated records
+that track the development of core ideas.
 </p>
 
-<section class="notes-hub">
-  <a class="note-tile" href="/notes/layer-0-core-concepts.html">
-    <div class="tile-title">Layer 0</div>
-    <div class="tile-sub">Core Concepts</div>
-  </a>
+<p>
+Entries are intended as concise, timestamped references rather than
+fully polished expositions.
+</p>
 
-  <!-- Uncomment when ready
-  <a class="note-tile" href="/notes/layer-1-structural-filters.html">
-    <div class="tile-title">Layer 1</div>
-    <div class="tile-sub">Structural Filters</div>
-  </a>
+<h2>Entries</h2>
 
-  <a class="note-tile" href="/notes/layer-2-spectral-dynamics.html">
-    <div class="tile-title">Layer 2</div>
-    <div class="tile-sub">Spectral Dynamics</div>
-  </a>
-
-  <a class="note-tile" href="/notes/layer-3-readout-operator.html">
-    <div class="tile-title">Layer 3</div>
-    <div class="tile-sub">Readout Operator</div>
-  </a>
-
-  <a class="note-tile" href="/notes/layer-4-diagnostics.html">
-    <div class="tile-title">Layer 4</div>
-    <div class="tile-sub">Diagnostics</div>
-  </a>
-
-  <a class="note-tile" href="/notes/layer-5-synthesis.html">
-    <div class="tile-title">Layer 5</div>
-    <div class="tile-sub">Synthesis</div>
-  </a>
-  -->
-</section>
-
-<style>
-  /* ===== Notes hub: minimal tiles ===== */
-  .notes-intro{
-    margin: 8px 0 18px;
-    color: #5f6368;
-    line-height: 1.7;
-    max-width: 72ch;
-  }
-
-  .notes-hub{
-    display: grid;
-    grid-template-columns: repeat(3, minmax(0, 1fr));
-    gap: 14px;
-    margin-top: 8px;
-  }
-
-  @media (max-width: 980px){
-    .notes-hub{ grid-template-columns: repeat(2, minmax(0, 1fr)); }
-  }
-  @media (max-width: 640px){
-    .notes-hub{ grid-template-columns: 1fr; }
-  }
-
-  .note-tile{
-    display: block;
-    text-decoration: none;
-    color: inherit;
-    background: #ffffff;
-    border: 1px solid #e0e0e0;
-    border-radius: 14px;
-    padding: 18px 18px;
-    transition: transform 0.08s ease, box-shadow 0.08s ease, border-color 0.08s ease;
-  }
-
-  .note-tile:hover{
-    transform: translateY(-1px);
-    border-color: #d0d0d0;
-    box-shadow: 0 10px 24px rgba(0,0,0,0.08);
-  }
-
-  .tile-title{
-    font-weight: 700;
-    font-size: 1.05rem;
-    letter-spacing: -0.01em;
-    color: #202124;
-    margin-bottom: 6px;
-  }
-
-  .tile-sub{
-    font-size: 0.98rem;
-    color: #5f6368;
-    line-height: 1.5;
-  }
-</style>
+<ul>
+  <li>
+    <a href="/notes/Layer 0 - Core Concepts.html">
+      Layer 0 - Core Concepts
+    </a>
+  </li>
+</ul>
 
 </body>
 </html>
