--- a/notes/index.html
+++ b/notes/index.html
@@ -18,13 +18,11 @@
 <h1>Notes</h1>
 
 <p>
-This page archives research notes, technical memos, and dated records
-that track the development of core ideas.
+This page records the core concepts and equations that define the framework of the research.
 </p>
 
 <p>
-Entries are intended as concise, timestamped references rather than
-fully polished expositions.
+Each entry summarizes the core concepts and equations extracted from a corresponding paper.
 </p>
 
 <h2>Entries</h2>
