--- a/index.html
+++ b/index.html
@@ -19,8 +19,7 @@
   <div class="hero-text">
     <h1>NeoArk Lab.</h1>
     <p class="subtitle">
-      Independent Research Program<br>
-      Mathematical Structures and Foundations
+      In Search of Invariant Truths<br>
     </p>
     <p class="subtext">
       neoark2025@naver.com
