--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
     <h1>NeoArk Lab.</h1>
     <p class="subtitle">
       In Search of Invariant Truths<br>
+      Let there be light.
     </p>
     <p class="subtext">
       neoark2025@naver.com
